Added notes for lit study table

--- a/frontmatter/publication.tex
+++ b/frontmatter/publication.tex
@@ -2,7 +2,7 @@
 \addcontentsline{toc}{chapter}{Publication}
 \makeatletter\@mkboth{}{Publication}\makeatother
 
-Sections of the work presented in this thesis were accepted for publication in the following paper:
+Sections of this work form part of the following paper which was accepted for publication:
 
 \paragraph
 J.M. Louw and H.W. Jordaan, 
