--- a/glossary.tex
+++ b/glossary.tex
@@ -73,6 +73,7 @@
 \newacronym{H-inf}{$\mathscr{H}_\infty$}{H-Infinity}
 \newacronym{RISE}{RISE}{Robust Integral of the Sign of the Error}
 \newacronym{SMC}{SMC}{Sliding Mode Control}
+\newacronym{RCAC}{RCAC}{Retrospective Cost Adaptive Control}
 
 
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
