--- a/glossary.tex
+++ b/glossary.tex
@@ -74,8 +74,7 @@
 \newacronym{RISE}{RISE}{Robust Integral of the Sign of the Error}
 \newacronym{SMC}{SMC}{Sliding Mode Control}
 \newacronym{RCAC}{RCAC}{Retrospective Cost Adaptive Control}
+\newacronym{ADRC}{ADRC}{Active Disturbance Rejection Control}
 
-
-% \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
 
 
