--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -258,6 +258,16 @@
         Historically, \gls{MPC} was designed for slow moving processes in the chemical industry because the computational intensity of this method limited the controller frequency on the available hardware \cite{Lee2011}.
         However, due to improvements in the speed of computational hardware, \gls{MPC} has become a viable controller for faster systems.
         Various \gls{MPC} implementations were successfully applied in experimental flight tests which shows that \gls{MPC} is suitable for practical multirotor implementations \cite{Zurn2016, Son2019, Son2018}
+        
+        \paragraph
+        It is also noted that most proposed controllers, including \gls{MPC} implementation, are based on a linearised plant model of the non-linear multirotor-payload dynamics.
+        This shows that a linearised plant model can provide a sufficient representation of the suspended payload dynamics for effective swing damping control.
+        % In some studies, seperate controllers are applied to different parts of the control problem where the plant models considered by some controllers are non-linear, and others are linear \cite{Martinez-Vasquez2020}.
+        % In Table~\ref{tbl:lit}, the \emph{Plant model} column considers the specific model that includes the suspended payload dynamics.
+        Some studies show in simulation that a controller with a non-linear plant model improves the trajectory tracking performance for aggressive manoeuvres compared to a controller with a linear plant model \cite{??}.
+        However, this greatly increases the computational complexity of the controller.
+        None of the studies considered in Table~\ref{tbl:lit} that were implemented on practical systems used non-linear plant models.
+        Some practical implementation apply controllers which do not depend on a plant model and show promising results \cite{Muthusamy2021a, Hua2021, Faust2014}.
 
         \paragraph
         Note from Table~\ref{tbl:lit}, that many studies only consider the proposed controllers in simulation and do not include practical data.
@@ -267,7 +277,7 @@
         
         \begin{figure}[ht]
             \centering
-            \includegraphics[width=0.5\linewidth]{lit_study/fig/motion_capture}
+            \includegraphics[width=0.6\linewidth]{lit_study/fig/motion_capture}
             \caption{Optitrack motion capture system for multirotor experiments \cite{Ireland2014}}
             \label{fig:motion_capture}
         \end{figure}        
@@ -278,25 +288,30 @@
         Figure~\ref{fig:motion_capture} shows an indoor motion capture setup used for multirotor experiments.
         In these experiments, motion capture systems like Vicon \cite{Muthusamy2021a, Hua2021, Faust2014, Zurn2016, Son2019, Son2018} or Optitrack \cite{Mosco-Luciano2020} provide high accuracy state feedback data at rates of \SI{100}{\hertz} or more.
         This type of setup is often impractical for real-life multirotor applications.
+        
+        \paragraph
         Outdoor payload transportation is dependant on state feedback from inaccurate sensors like \gls{GPS} and potentiometers, which greatly increase the difficulty of the control problem.
         The multirotor-payload system may also be exposed to uncontrolled wind disturbances which further complicates the control problem.
+        Figure~\ref{fig:outdoor_setup} shows a multirotor in an outdoor practical experiment with a suspended payload \cite{Wang2020}.
 
-        % ?? Lit study: include different types of \gls{MPC}, e.g. DMC, MAC
-        % ?? different types of models \cite{}, 
-        % ?? See \cite{Garcia1989} for good example of different implementations with different models
-
+        \begin{figure}[ht]
+            \centering
+            \includegraphics[width=0.6\linewidth]{lit_study/fig/outdoor_setup.png}
+            \caption{Multirotor with \gls{GPS} for outdoor experiments \cite{Wang2020}}
+            \label{fig:outdoor_setup}
+        \end{figure}  
         % ?? Table of literature
         % https://docs.google.com/spreadsheets/d/1jw2rWzO23fUF4sSDTCzJE1Sc9mvNLo3NGZaDicredc8/edit#gid=1305340631
 
         \paragraph
-        As observed by \citet{Hua2021}, most of the reported controllers are designed based on accurate models and model uncertainties are not considered in the studies.
+        As observed by \citet{Hua2021}, most reported controllers in literature are designed based on accurate models and dynamical uncertainties are not considered in the studies.
+        This is also evident from the literature considered in Table~\ref{tbl:lit}.
+        Many controllers account for uncertainty in the parameter values of the plant model.
+        These controllers either apply robust techniques \cite{Taylor2020} to ensure stability despite the parameter uncertainty, or adaptive techniques \cite{Dai2014} to change the control law to result in improved control with the resultant dynamics.
+        Other controllers combine robust and adaptive techniques into a single control architecture \cite{Erasmus2020, Slabber2020}.
+        In Table~\ref{tbl:lit}, the \emph{Parameter uncertainty} column does not include uncertainty due to modelling errors as a result of a priori linearisation and discretisation.
+        The uncertainty considered by this column results from unknown physical properties or dynamics of a system prior to the control system design.
         
-        The column ``Parameter uncertainty'' does not consider uncertainty due to modelling errors as a result of a priori linearisation and discretisation.
-        Here uncertainty is considered as a result of the unknown physical properties or dynamics of a system prior to flight.
-        
-        In some studies, multiple controllers are applied to different parts of the control problem where the plant models considered by some controllers are non-linear, and others are linear \cite{Martinez-Vasquez2020}.
-        In Table~\ref{tbl:lit}, the column ``Plant model'' refers to the plant model representing the dynamics which include the suspended payload.
-
     % See data driven is scarce?
     % therefore data driven.
     % MPC is a good method of applying model
